[home] Fix scrollbar for recent and recovery boxes

--- a/common/loginpage/src/css/styles.less
+++ b/common/loginpage/src/css/styles.less
@@ -675,8 +675,8 @@ li.menu-item {
 }
 
 .recent-panel-container {
-  display: grid;
-  grid-auto-rows: max-content;
+  display: flex;
+  flex-direction: column;
   gap: 40px;
   position: relative;
   height: 100%;
@@ -816,6 +816,14 @@ li.menu-item {
     font-size: 18px;
     line-height: 16px;
   }
+}
+
+#box-container {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  flex: 1;
+  overflow-y: auto;
 }
 
 #box-recent, #box-recovery {
